@@ -45,6 +45,7 @@ class AndroidLibraryConventionPlugin : Plugin<Project> {
                         val testTask = test as? org.gradle.api.tasks.testing.Test
                         testTask?.useJUnitPlatform()
                         testTask?.setProperty("failOnNoDiscoveredTests", false)
+                        testTask?.jvmArgs("--enable-native-access=ALL-UNNAMED")
                         testTask?.systemProperty("junit.jupiter.execution.failIfNoTests", "false")
                     }
                 }
